cmake_minimum_required(VERSION 3.15)
project(fract_ol)

set(CMAKE_CXX_STANDARD 14)

include_directories(includes)
include_directories(libft/includes)
include_directories(libcl/includes)
include_directories(libcomplex/includes)
include_directories(minilibx_macos)
include_directories(kernel_includes)
include_directories(kernels)

add_executable(fract_ol
        includes/fract_defines.h
        includes/fract_structs.h
        includes/fractol.h
        kernels/mandel.cl
        kernels/color.cl
        kernels/julia.cl
        kernels/buddha.cl
        kernel_includes/mandelbrot.h
        kernel_includes/color.h
        kernel_includes/cl_complex.h.cl
        kernel_includes/julia.h
        kernel_includes/buddhabrot.h
        libcomplex/srcs/part_one.c
        libcomplex/srcs/part_two.c
        libcomplex/srcs/part_three.c
        libcl/includes/cl_structs.h
        libcl/includes/cl_user_structs.h
        libcl/includes/libcl.h
        libcl/includes/cl_errors.h
        libcl/srcs/assembly.c
        libcl/srcs/build.c
        libcl/srcs/clean_up.c
        libcl/srcs/execute_kernel.c
        libcl/srcs/get_dev_info.c
        libcl/srcs/init_cl.c
        libcl/srcs/clean_up.c
        libcl/srcs/mandelbrot_buffs.c
        libcl/srcs/julia_buffs.c
        libcl/srcs/buddhabrot_buffs.c
        libcl/Makefile
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/srcs/ft_arrnew.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_lstnull.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_skipnchars.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strdup_till_char.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strjoinf.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strsplit_arrc.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strstr_valid.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strsubptr.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_swap.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/ft_wordcounter.c
        libft/srcs/get_next_line.c
        libft/Makefile
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        srcs/calculate_mandelbrot.c
        srcs/draw_image.c
        srcs/errors.c
        srcs/fractol.c
        srcs/init.c
        srcs/menu.c
        srcs/mouse_control.c
        srcs/view_control.c
        srcs/utils.c
        srcs/init_fracts.c
        srcs/calculate_julia.c
        srcs/julia_transform.c
        srcs/clean_up.c
        srcs/calculate_buddhabrot.c
        srcs/buddhabrot_tools.c
        Makefile)
